--- a/lab-02/templates/index.html
+++ b/lab-02/templates/index.html
@@ -9,7 +9,7 @@
         <img src="https://file1.hutech.edu.vn/file/editor/homepage/stories/hinh34/logo%20CMYK-01.png" 
         alt="hutech" style="display:block; margin-left:auto;margin-right: auto ; width: 30%;">
         <h4 style="font-weight:bold; text-align:center ;  ">Bài thực hành bảo mật thông tin nâng cao</h4>
-    <h5 style="text-align:center">Ngô Tấn Tài 2280602794 HELLO WORLD!</h5>
+    <h5 style="text-align:center">Trần Văn Thái Sơn 2280602768 HELLO WORLD!</h5>
         
         <ul style="margin-top: 30px">
             
